✨ Feat: Create initial express server

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -7,5 +7,12 @@
       "quoteStyle": "single",
       "indentWidth": 2
     }
+  },
+  "linter": {
+    "rules": {
+      "suspicious": {
+        "noConsole": "off"
+      }
+    }
   }
 }
