--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,12 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "node16"
+    "moduleResolution": "node16",
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["*"]
+    },
+    "allowImportingTsExtensions": true,
+    "noEmit": true
   }
 }
